Add IntelliJ project configuration and monotonic window implementation
Configure project with IntelliJ-specific `.idea` files, including encoding, compiler, Maven repository settings, and `.gitignore` updates for IDE artifacts. Implement `MonotonicWindow` class for sliding window maximum problem and create comprehensive parameterized JUnit tests for `MonotonicWindow`. Refactor BFS and DFS tests to use parameterized tests for cleaner, reusable test cases.